@@ -1,3 +1,7 @@
+2017-05-15 Massimo Manghi <mxmanghi@apache.org>
+    * src/apache-2/mod_rivet.c: server root interpreter
+    needs to re-seed the random number generator
+
 2017-04-19 Massimo Manghi <mxmanghi@apache.org>
     * doc/xml/directives.xml: fixed typo
     * VERSION,configure.ac: bumping version number to 2.3.4
@@ -16,7 +20,7 @@
     ::rivet::* command names in this packages
     * src/librivet/rivetWWW.c: new buffer size allocation
     to prevent apache from crashing when too many
-    characters needed escaping are in a string
+    characters needing escaping are in a string
 
 2016-11-28 Massimo Manghi <mxmanghi@apache.org>
     * .: releasing rivet 2.3.3
